[package]
name = "dos-attacks"
version = "0.1.0"
authors = ["Cody Lewis <cody@codymlewis.com>"]
edition = "2018"
license = "GPL-3.0"
description = "Rust implementations of DoS attacks."
repository = "https://github.com/codymlewis/dos-attacks"
readme = "README.md"

[dependencies]
rand = "0.7.3"
pnet = "0.26.0"
ctrlc = "3.1.4"
